--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "framer-motion": "^11.3.21",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
@@ -16,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
     "sp": "^0.1.3",
     "swiper": "^11.1.9"
   },
